--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firstapp",
+  "name": "devTools",
   "version": "1.0.0",
   "description": "y",
   "author": "常九福 <2427989443@qq.com>",
@@ -17,7 +17,8 @@
   "dependencies": {
     "element-ui": "^2.15.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuepress": "^1.8.2"
   },
   "devDependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -63,7 +64,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
+    "webpack": "^5.33.2",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
